--- a/src/layouts/testpage/Footer.astro
+++ b/src/layouts/testpage/Footer.astro
@@ -1,7 +1,7 @@
 ---
 import { Icon } from 'astro-icon'
-import FooterNav from 'layout-components/FooterNav.astro'
-import NavToggle from "layout-components/NavToggle.astro";
+import FooterNav from './FooterNav.astro'
+import NavToggle from "./NavToggle.astro";
 import NavSocial from './NavSocial.astro';
 ---
 
@@ -9,8 +9,7 @@ import NavSocial from './NavSocial.astro';
   <div class="FlexBetween MaxCenter">
     
     <a href="/">
-      <Icon class='w-48 stroke-clr-n1 fill-clr-n1' 
-        name='logoGreske' />
+      <p class='text-clr-n1 font-secondary font-bold text-32'>Scott Greske</p>
     </a>
 
     <NavSocial/>
