--- a/src/layouts/main/LayoutBlogPost.astro
+++ b/src/layouts/main/LayoutBlogPost.astro
@@ -4,7 +4,7 @@ const { title, pubDate, description, author, image, tags } = Astro.props.frontma
 ---
 
 <LayoutMain pageTitle={title}>
-  <section class='py-24 text-center'>
+  <section >
 
     <div class='CardOne | p-12 mb-20'>
       <h1 class=' text-center text-40 mb-8'>{title}</h1>
