--- a/src/layouts/testpage/Header.astro
+++ b/src/layouts/testpage/Header.astro
@@ -1,6 +1,6 @@
 ---
 import { Icon } from 'astro-icon'
-import HeaderNav from 'layouts/main/HeaderNav.astro';
+import HeaderNav from 'layouts/main/NavHeader.astro';
 import NavSocial from 'layouts/main/NavSocial.astro'
 import NavToggle from 'layouts/main/NavToggle.astro';
 ---
