--- a/src/global.css
+++ b/src/global.css
@@ -73,27 +73,16 @@
   ::after {
     --tw-content: '';
   }
-  /*
-  1. Use a consistent sensible line-height in all browsers.
-  2. Prevent adjustments of font size after orientation changes in iOS.
-  3. Use a more readable tab size.
-  4. Use the user's configured `sans` font-family by default.
-  5. Use the user's configured `sans` font-feature-settings by default.
-  6. Use the user's configured `sans` font-variation-settings by default.
-  */
+
   html {
-    -webkit-text-size-adjust: 100%; /* 2 */
-    -moz-tab-size: 4; /* 3 */
-    tab-size: 4; /* 3 */
-    font-family: theme('fontFamily.sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"); /* 4 */
+    -webkit-text-size-adjust: 100%; /*  Prevent adjustments of font size after orientation changes in iOS. */
+    font-family: theme('fontFamily.sans', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"); /* Use the user's configured `sans` font-family by default. */
     /* font-feature-settings: theme('fontFamily.sans[1].fontFeatureSettings', normal); 
     font-variation-settings: theme('fontFamily.sans[1].fontVariationSettings', normal);  */
   }
 
   body {
-    @apply bg-clr-bg text-clr-default font-primary;
-    margin: 0;
-    line-height: 1.5;
+    @apply bg-clr-bg text-clr-default font-primary text-center leading-6 m-0;
   }
 
   hr {
@@ -104,15 +93,6 @@
 
   abbr:where([title]) {
     text-decoration: underline dotted; /* Add the correct text decoration in Chrome, Edge, and Safari. */
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    @apply text-center;
   }
 
   a {
@@ -137,10 +117,8 @@
     font-size: 80%; /* Add the correct text decoration in Chrome, Edge, and Safari. */
   }
 
-  /*
-  Prevent `sub` and `sup` elements from affecting the line height in all browsers.
-  */
-
+  /* Prevent `sub` and `sup` elements from affecting the line height in all browsers. */
+  
   sub,
   sup {
     font-size: 75%;
@@ -156,20 +134,6 @@
   sup {
     top: -0.5em;
   }
-
-  /*
-  1. Remove text indentation from table contents in Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=999088, https://bugs.webkit.org/show_bug.cgi?id=201297)
-  2. Correct table border color inheritance in all Chrome and Safari. (https://bugs.chromium.org/p/chromium/issues/detail?id=935729, https://bugs.webkit.org/show_bug.cgi?id=195016)
-  3. Remove gaps between table borders by default.
-  */
-
-
-
-  /*
-  1. Change the font styles in all browsers.
-  2. Remove the margin in Firefox and Safari.
-  3. Remove default padding in all browsers.
-  */
 
   button,
   input,
@@ -190,7 +154,6 @@
   button,
   select {
     text-transform: none;   /* Remove the inheritance of text transform in Edge and Firefox. */
-
   }
 
   button,
@@ -218,7 +181,6 @@
   ::-webkit-inner-spin-button,
   ::-webkit-outer-spin-button {
     height: auto;   /* Correct the cursor style of increment and decrement buttons in Safari. */
-
   }
 
   [type='search'] {
@@ -238,39 +200,9 @@
   summary {
     display: list-item;   /* Add the correct display in Chrome and Safari. */
   }
-
   
-  dl,
-  dd,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  hr,
-  figure,
-  p,
-  pre {
+  dl, dd, h1, h2, h3, h4, h5, h6, hr, figure, p, pre {
     margin: 0;
-  }
-
-  fieldset {
-    margin: 0;
-    padding: 0;
-  }
-
-  legend {
-    padding: 0;
-  }
-
-  dialog {
-    padding: 0;   /* Reset default styling for dialogs. */
-
-  }
-
-  textarea {
-    resize: vertical;   /* Prevent resizing textareas horizontally by default. */
   }
 
   input::placeholder,
@@ -288,12 +220,6 @@
     cursor: default;   /* Make sure disabled buttons don't get the pointer cursor. */
   }
 
-  /*
-  1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
-  2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
-    This can trigger a poorly considered lint error in some tools but is included by design.
-  */
-
   img,
   svg,
   video,
@@ -302,18 +228,13 @@
   iframe,
   embed,
   object {
-    display: block; /*  Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14) */
-    vertical-align: middle; /*  Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210) This can trigger a poorly considered lint error in some tools but is included by design. */
+    display: block;
   }
 
   img,
   video {
-    max-width: 100%;   /* Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14) */
+    max-width: 100%;
     height: auto;
-  }
-
-  [hidden] {
-    display: none; /* Make elements with the HTML hidden attribute stay hidden by default */
   }
 
   svg {
@@ -339,7 +260,7 @@
 
 /* components */
   .CardOne {@apply bg-black/50 text-clr-2 w-fit m-auto rounded-lg shadow-xl border-t-1 border-t-clr-1 border-l-1 border-l-clr-1}
+  .GradientOne {@apply bg-gradient-to-l from-clr-bg to-clr-3 from-70%}
 
 
 }
-
