--- a/src/_component-library/PictureContainer.astro
+++ b/src/_component-library/PictureContainer.astro
@@ -1,9 +1,9 @@
 ---
 import { breakpoints } from 'src/variables'
 
-import imgM from './src/images/XXXXX'
-import imgT from './src/images/XXXXX'
-import imgD from './src/images/XXXXX'
+import imgM from './src/assets/XXXXX'
+import imgT from './src/assets/XXXXX'
+import imgD from './src/assets/XXXXX'
 ---
 
 <picture>
@@ -14,7 +14,7 @@ import imgD from './src/images/XXXXX'
         srcset={imgT} 
         media={`(min-width: ${breakpoints.md})`}/>
     <img 
-        class="w-full min-h-[300px] md:max-h-[600px] object-cover object-left"
+        class=" min-h-[300px] md:max-h-[600px] object-cover object-left"
         src={imgM}
         alt="XXXXX"/>
-</picture>src/variables
+</picture>
