--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,7 @@
 ---
-import LayoutMain from 'layouts/main/LayoutMain.astro';
+import LayoutMain from 'layouts/Layout.astro';
 ---
 
 <LayoutMain pageTitle="Home Page">
-  <a class='block' href="/tree">Tree</a>
   <a class='block' href="/testpage">Test Page</a>
 </LayoutMain>
